# advent-of-code-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp
src/aoc/: CMakeLists.txt  aoc.cpp  aoc.h  aocConfig.h.in
src/reader/: CMakeLists.txt  reader.cpp  reader.h
